fix(app): ensure tooltips are not displayed behind a dialog

--- a/packages/styles/variables.css
+++ b/packages/styles/variables.css
@@ -101,7 +101,7 @@
   --content-max-width: 1000px;
 
   /* z-index */
-  --z-index-tooltip: 9;
+  --z-index-tooltip: 22;
   --z-index-loader: 8;
   --z-index-scrim: 7;
   --z-index-dialog: 21;
